# zs10-linux

./: CMakeLists.txt  README.md  arm-linux-setup.cmake  push.bat  ympkg.xml
pkg_bat/: clean.bat  compile.bat  package.bat  recompile.bat
src/: main.c
src/inc/: YMAPI.h  apn.h  audio.h  dev.h  hid.h  key.h  mbedtls_aes_rsa.h  mqtt.h  net.h  ota.h  system.h  tools.h  tts_yt_task.h  typedefine.h  ui_api.h  ui_lvgl.h  utf8str.h  var.h
src/module/common/: apn.c  dev.c  hid.c  key.c  mqtt.c  mqtt_aliyun.c  mqtt_aliyun.h  mqtt_aliyun_dual.c  net.c  ota.c  system.c  tools.c
src/module/common/audio/: audio.c  numplay.c  numplay.h  res.c  res.h  tts_yt_task.c  wavmix.c  wavmix.h
src/module/demo/: audio_demo.c  use_demo.c
src/ui/lvgl/: lv_conf.h  ui_api.c  ui_lvgl.c
src/ui/lvgl/porting/: lv_port_disp.c  lv_port_indev.c  lv_port_indev.h
src/ui/lvgl/src/extra/libs/ffmpeg/: lv_ffmpeg.c
src/ui/lvgl/src/font/: lv_font.h  lv_font_alibaba_semibold_cut_en_80.c
src/ui/lvgl/src/misc/: lv_color.h
